tests/algorithms/x/Rust/sorts/stooge_sort.rs
// Generated by Mochi transpiler v0.10.63
use std::sync::atomic::{AtomicBool, AtomicI64, Ordering};
use std::time::{SystemTime, UNIX_EPOCH};
static NOW_SEEDED: AtomicBool = AtomicBool::new(false);
static NOW_SEED: AtomicI64 = AtomicI64::new(0);
fn _now() -> i64 {
    if !NOW_SEEDED.load(Ordering::SeqCst) {
        if let Ok(s) = std::env::var("MOCHI_NOW_SEED") {
            if let Ok(v) = s.parse::<i64>() {
                NOW_SEED.store(v, Ordering::SeqCst);
                NOW_SEEDED.store(true, Ordering::SeqCst);
            }
        }
    }
    if NOW_SEEDED.load(Ordering::SeqCst) {
        let seed = (NOW_SEED.load(Ordering::SeqCst)*1664525 + 1013904223) % 2147483647;
        NOW_SEED.store(seed, Ordering::SeqCst);
        seed
    } else {
        SystemTime::now().duration_since(UNIX_EPOCH).unwrap().as_nanos() as i64
    }
}
fn _mem() -> i64 {
    if let Ok(mut f) = std::fs::File::open("/proc/self/statm") {
        let mut s = String::new();
        use std::io::Read;
        if f.read_to_string(&mut s).is_ok() {
            if let Some(rss) = s.split_whitespace().nth(1) {
                if let Ok(v) = rss.parse::<i64>() {
                    return v * 4096;
                }
            }
        }
    }
    0
}
fn main() {
        let _start: i64 = _now();
    fn stooge(arr: &mut Vec<i64>, mut i: i64, mut h: i64) {
    if (i >= h) {
        return
    }
    if (arr[i as usize] > arr[h as usize]) {
        let mut tmp: i64 = arr[i as usize];
        (*arr)[i as usize] = arr[h as usize];
        (*arr)[h as usize] = tmp;
    }
    if (((h - i) + 1) > 2) {
        let mut t: i64 = (((h - i) + 1) / 3);
        stooge(arr, i, (h - t));
        stooge(arr, (i + t), h);
        stooge(arr, i, (h - t));
    }
};
    fn stooge_sort(mut arr: Vec<i64>) -> Vec<i64> {
    stooge(&mut arr, 0, ((arr.clone().len() as i64) - 1));
    return arr
};
    println!("{}", format!("{:?}", stooge_sort(vec![18, 0, -7, -1, 2, 2])));
    let _end: i64 = _now();
    let duration_us: i64 = ((_end - _start) / 1000);
    let memory_bytes: i64 = _mem();
    println!("{{\n  \"duration_us\": {},\n  \"memory_bytes\": {},\n  \"name\": \"{}\"\n}}", duration_us, memory_bytes, "main");

}
